2008-04-27  Ben Van Mechelen  <me@benvm.be>

	* plugins/sensor_list/Makefile.am:
	* plugins/sensor_list/sensor_list.py:
	    remove this plugin for version 0.1.1
	    

2008-04-27  Ben Van Mechelen  <me@benvm.be>

	* TODO.tasks:
	* aclocal.m4:
	* configure.ac:
	* data/garmon.schemas:
	* data/prefs.glade:
	* garmon/__init__.py:
	* garmon/garmon_app.py:
	* garmon/obd_device.py:
	* garmon/plugin.py:
	* garmon/plugin_manager.py:
	* garmon/prefs.py:
	* garmon/property_object.py:
	* garmon/scheduler.py:
	* garmon/sensor.py:
	* garmon/widgets.py:
	* plugins/dashboard/dashboard.glade:
	* plugins/dashboard/dashboard.py:
	* plugins/dtc_reader/dtc_reader.py:
	* plugins/live_data/live_data.glade:
	* plugins/live_data/live_data.py:
	* scripts/elm_sim.py:
	    merge from trunk
	    update version to 0.1.1
	    

2008-04-27  Ben Van Mechelen  <me@benvm.be>

	* plugins/dashboard/dashboard.py:
	    prevent the gauges from pointing beyond their range


2008-04-27  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	* garmon/scheduler.py:
	* plugins/dashboard/dashboard.py:
	* plugins/live_data/live_data.py:
	    Lots and lots of changes to make OBDDevice actually work :)
        
        
2008-04-26  Ben Van Mechelen  <me@benvm.be>

	* garmon/obd_device.py:
	    close method always emits the connected signal


2008-04-26  Ben Van Mechelen  <me@benvm.be>

	* garmon/garmon_app.py:
	* garmon/obd_device.py:
	* garmon/scheduler.py:
	* plugins/dashboard/dashboard.py:
	* plugins/live_data/live_data.py:
	    Reworked OBDDevice: We are now using add_io_watch.
	    We send a command to the device and just wait for the 
	    io signal. Depending on success or error we call a supplied
	    callback. Not all methods have been adjusted yet!!!.
	    

2008-04-25  Ben Van Mechelen  <me@benvm.be>

	* plugins/dashboard/dashboard.py:
	* plugins/dtc_reader/dtc_reader.py:
	    disconnect from signals on plugin deactivation
	* scripts/elm_sim.py:
	    change baudrate to 9600
	    
