@@ -50,7 +50,7 @@
       <owner>garmon</owner>
       <type>string</type>
       <locale name="C">
-        <default>LiveData,DTCReader,DTCClearer</default>
+        <default>DashBoard,LiveData,DTCReader,DTCClearer</default>
         <short>Active Plugins</short>
         <long>The plugins to activate when the app is started</long>
       </locale>
